# orion-football-alerts

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  orion_football  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: futebol_config.example.json
docs/: AGENT_INTEGRATION.md  ARCHITECTURE.md  INSTALL-MACOS.md
src/orion_football/: __init__.py  futebol.py
src/orion_football/config/: futebol_config.example.json
src/orion_football/fixtures/: cbf_tabela_detalhada_19_24_sample.txt  cbf_tabela_detalhada_sample.html  cbf_tabela_oficial_sample.html
src/orion_football/resources/: futebol_config.example.json
tests/: test_cbf_fallback.py  test_futebol.py  test_public_setup.py
